@@ -1,6 +1,11 @@
 2007-03-06  Mike Kestner  <mkestner@novell.com>
 
 	* generator/Signal.cs : add try/catch blocks to native callback
+	virtual method delegate too.
+
+2007-03-06  Mike Kestner  <mkestner@novell.com>
+
+	* generator/Signal.cs : add try/catch blocks to native callback
 	delegates so that exceptions are not propagated across the native
 	boundary.  Now raises GLib.ExceptionManager.UnhandledException.
 	* glib/ExceptionManager.cs : new class with UnhandledException
